--- a/backend/package.json
+++ b/backend/package.json
@@ -13,25 +13,25 @@
     "db:seed": "ts-node src/seed.ts"
   },
   "dependencies": {
-  "@prisma/client": "^5.6.0",
-  "cors": "^2.8.5",
-  "dotenv": "^16.3.1",
-  "express": "^4.18.2",
-  "helmet": "^7.1.0",
-  "morgan": "^1.10.0",
-  "nodemailer": "^6.9.7",
-  "prisma": "^5.6.0",
-  "zod": "^3.22.4",
-  "@types/node": "^20.9.0"
+    "@prisma/client": "^5.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
+    "prisma": "^5.6.0",
+    "zod": "^3.22.4",
+    "@types/node": "^20.9.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.14"
   },
   "devDependencies": {
-  "@types/cors": "^2.8.17",
-  "@types/express": "^4.17.21",
-  "@types/morgan": "^1.9.9",
-  "@types/nodemailer": "^6.4.14",
-  "nodemon": "^3.1.10",
-  "ts-node": "^10.9.2",
-  "typescript": "^5.2.2"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18"
