--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^24.3.0",
+    "@types/nodemailer": "^6.4.14",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -21,12 +26,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
     "prisma": "^5.6.0",
-    "zod": "^3.22.4",
-    "@types/node": "^20.9.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9",
-    "@types/nodemailer": "^6.4.14"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
