--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es2020",
     "module": "commonjs",
     "lib": ["es2021"],
-    "types": ["node"],
+  "types": ["node"],
+  "typeRoots": ["./node_modules/@types"],
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
